[Windows] Make KeyEvent is-repeat flag consistent with other platforms.

In https://chromium-review.googlesource.com/c/chromium/src/+/754130 we
switched to populating the is-repeat flag of ui::KeyEvent solely based
on the flags in the underlying native event, if present.

In the case of a key event triggering a pop-up window to appear, this
caused the first auto-repeat of that event to be dispatched without the
repeat flag set.

To address this we restore the "fallback" path to manually determine
whether an event should be flagged as a repeat, in the case of where a
native event does not itself have the repeat flag set.

Bug: 895266
Change-Id: Ia224e38768d67bf0dc74d60d7e5ed7b6b6663d80
Reviewed-on: https://chromium-review.googlesource.com/c/1281874
Reviewed-by: Dave Tapuska <dtapuska@chromium.org>
Reviewed-by: Sadrul Chowdhury <sadrul@chromium.org>
Commit-Queue: Wez <wez@chromium.org>
Cr-Commit-Position: refs/heads/master@{#600116}
Former-commit-id: 5307906de5307f9c997a79634f10bd00c203f625